syntax = "proto3";
package nl.svsticky.chroma;

message UpdateAlbumRequest {
  string id = 1;
  string name = 2;
}